flapivor/tests/m3/hopix/typechecker/good/44-pattern-matching-08.hopix
type `<a, b> = `(a, b)

val x : Int = case `<Int, Int>(22, 33) {
  `<Int, Int>(x : Int, y : Int) => x + y
}