flapivor/tests/m3/hopix/typechecker/bad/36-record-matching-03.hopix
type T = { x : Int }

val main : String = case { x = 0 }<> { { z = (y : String) }<> => y }